Disabled the download now button

--- a/templates/index.html
+++ b/templates/index.html
@@ -97,7 +97,14 @@
               <p class="wow fadeInUp" data-wow-delay=".4s">
 				QuickCure leverages cutting-edge AI to support doctors with predictive insights, X-ray analysis, and ocular diagnostics. Our new virtual symptom checker and interactive FAQ chatbot make healthcare guidance accessible, efficient, and personalized for every patient.
               </p>
-              <a href="https://rebrand.ly/delivery-ud/" rel="nofollow" class="main-btn btn-hover wow fadeInUp" data-wow-delay=".6s"><span class="icon"><i class="lni lni-play-store"></i></span>  Download Now</a>
+              <a href="https://rebrand.ly/delivery-ud/" 
+   rel="nofollow" 
+   class="main-btn btn-hover wow fadeInUp" 
+   data-wow-delay=".6s" 
+   style="pointer-events: none; opacity: 0.5; cursor: default;" 
+   onclick="event.preventDefault();">
+    <span class="icon"><i class="lni lni-play-store"></i></span> Download Now
+</a>
             </div>
 					</div>
 					<div class="col-lg-6">
